--- a/src/components/OGPHead.astro
+++ b/src/components/OGPHead.astro
@@ -15,7 +15,7 @@ const description = "Visión Salcedense es un Movimiento Político que sostiene 
 <meta property="og:url" content={url} />
 <meta property="og:title" content={title} />
 <meta property="og:type" content="website" />
-<meta property="og:image" content="/favicon.png" />
+<meta property="og:image" content="/favicon.svg" />
 <meta property="og:description" content={description} />
 <meta property="og:site_name" content="Visión Salcedense" />
 
