--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -3,9 +3,9 @@ import { BASE_TITLE } from "@/utils";
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title={BASE_TITLE}>
+<Layout title={`Nosotros | ${BASE_TITLE}`}>
   <main>
-    <h1>Visión Salcedense</h1>
+    <h1>NOSOTROS | Visión Salcedense</h1>
   </main>
 </Layout>
 
